# bevy_blocks

./: .gitignore  Cargo.toml
assets/levels/: level_1.ron  level_2.ron  level_3.ron  level_4.ron  level_5.ron
assets/texture/: blocks-spritesheet.ron
src/: game_over.rs  gameplay.rs  level.rs  main.rs  main_menu.rs  pause_menu.rs  sprite_sheet.rs  state.rs
