[package]
name = "bevy_blocks"
version = "0.1.0"
authors = ["James Jackson <j.e.m.jackson@gmail.com>"]
description = "A Breakout clone written using the Bevy game engine"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7"
serde = "1.0"
ron = "0.6"
rand= "0.8"
